# DataVerse-ChatBot

./: .buildinfo  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  genindex.html  index.html  install.bat  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  test.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/chatbot/utils/: file_loader.html  utils.html
_sources/: api_reference.rst.txt  examples.rst.txt  index.rst.txt  overview.rst.txt  usage.rst.txt
_sources/modules/: bots.rst.txt  chatbot.rst.txt  web.rst.txt
assets/animation/: animation.py
data/chat_hist_analysis/: analysis_report_20250405_000842.md  analysis_report_20250405_001143.md  analysis_report_20250405_032725.md  analysis_report_20250405_033029.md
data/database/: history_and_usage.db
data/datasets/: responses.csv  responses.json
data/indexes/index_0714b29af85a966.faiss/: index.faiss  index.pkl
data/logs/: logs.log.1  logs.log.2  logs.log.3  logs.log.4  logs.log.5
data/models/: clf.pkl  metadata.json
data/web_content/: bcaitech.txt  cv.txt  wixsite.txt
docs/: create_manual_docs.py  gen_doc.py
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
html/: examples.html  usage.html
modules/: bots.html  chatbot.html
src/: admin_dashboard_launcher.py  main.py  tg_bot.py  whatsapp_bot.py
src/chatbot/: config.py  crawler.py  voice_mode.py
src/web/: admin_dashboard.py  chat_web_app.py  chat_web_template.py  how to run.txt
tests/: locustfile.py
(+47 files in other folders)
