[project]
name = "DataVerse-ChatBot"
version = "2.1.0"
description = "Versatile RAG system that powers real-time chat with data from the web and nearly all file formats, deployable as WhatsApp/Telegram bots or an iframe."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.45.2",
    "beautifulsoup4==4.12.3",
    "cchardet==2.2.0a2",
    "cohere==5.13.11",
    "crawl4ai==0.5.0.post4",
    "docling==2.25.2",
    "docx2txt==0.8",
    "faiss-cpu==1.10.0",
    "google-generativeai==0.8.4",
    "html2text==2024.2.26",
    "joblib==1.4.2",
    "langchain==0.3.18",
    "langchain-community==0.3.17",
    "langchain-docling==0.2.0",
    "langchain-experimental==0.3.4",
    "langchain-huggingface==0.1.2",
    "mistralai==1.5.0",
    "numpy==1.26.4",
    "openai==1.62.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "playsound==1.2.2",
    "protobuf==5.29.3",
    "pyaudio==0.2.14",
    "pymupdf==1.25.3",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "schedule>=1.2.2",
    "scikit-learn==1.6.1",
    "scrapegraph-py==1.12.0",
    "scrapegraphai==1.40.1",
    "sentence-transformers==3.4.0",
    "tenacity==9.0.0",
    "tldextract==5.1.3",
    "unstructured==0.16.17",
]
